--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,13 @@
 
+
+  body {
+    background-color: #fbfbfb;
+  }
+  @media (min-width: 991.98px) {
+    main {
+      padding-left: 240px;
+    }
+  }
   
   /* Sidebar */
   .sidebar {
@@ -6,13 +15,17 @@
     top: 0;
     bottom: 0;
     left: 0;
-    padding: 58px 0 0; /* Height of navbar */
+    padding: 33px 0 0; /* Height of navbar */
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
     width: 240px;
     z-index: 600;
   }
   
- 
+  @media (max-width: 991.98px) {
+    .sidebar {
+      width: 100%;
+    }
+  }
   .sidebar .active {
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
@@ -25,4 +38,21 @@
     padding-top: 0.5rem;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  }
+
+  .admin_logo{
+    text-align: center;
+  }
+
+  .side_div{
+    line-height: 14px;
+
+  }
+  .table{
+    width: 1%
+  }
+
+  .body_class{
+    width: 84%;
+    margin-left: auto;
   }
