--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,51 @@
-<p>from index</p>
+<%= render 'layouts/shared/side_menu'%>
+
+<div class="body_class">
+
+
+<table class="table align-middle mb-0 bg-white">
+  <thead class="bg-light">
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Role</th>
+      <th class="text-center">Action</th>
+      
+    </tr>
+  </thead>
+  <tbody>
+  <%@users.each do |row|%>
+    <tr>
+      <td>
+        <div class="d-flex align-items-center">
+          <img
+              src="https://mdbootstrap.com/img/new/avatars/8.jpg"
+              alt=""
+              style="width: 45px; height: 45px"
+              class="rounded-circle"
+              />
+          <div class="ms-3">
+            <p class="fw-bold mb-1"><%=row.name%></p>
+          </div>
+        </div>
+      </td>
+      <td>
+        <p class="fw-normal mb-1"><%=row.email%></p>
+      </td>
+      <td>
+        <p class="fw-normal mb-1"><%=row.role%></p>
+      </td>
+
+      <td class="text-center">
+         <%=link_to "show ", user_path(row) , class:"btn btn-success btn-sm btn-rounded"%>
+
+         <%=link_to "Edit user ", edit_user_path(row) ,class:"btn btn-primary btn-sm btn-rounded"%>
+       
+         <%=link_to "delete user", row, data: {'turbo-method': :delete  , turbo_confirm: 'Are you sure?'},class:"btn btn-danger btn-sm btn-rounded"%></td>
+      </td>
+    </tr>
+ <%end%>
+  </tbody>
+</table>
+
+</div>
