--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,3 +56,11 @@
     width: 84%;
     margin-left: auto;
   }
+  .btn-position{
+    margin-top: 1.5%;
+  }
+.card-class{
+  width:50%;
+  height: 10%;
+}
+  
