--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -19,19 +19,19 @@
         </div>
          <div  class="list-group-item list-group-item-action py-2 ripple">
          <i  class="fas fa-tachometer-alt fa-fw me-3"></i>
-         <%=link_to "Categories" ,users_path 
+         <%=link_to "Categories" ,categories_path 
          
           %>
         </div>
          <div  class="list-group-item list-group-item-action py-2 ripple">
          <i  class="fas fa-tachometer-alt fa-fw me-3"></i>
-         <%=link_to "Products" ,users_path 
+         <%=link_to "Products" ,products_path 
          
           %>
         </div>
          <div  class="list-group-item list-group-item-action py-2 ripple">
          <i  class="fas fa-tachometer-alt fa-fw me-3"></i>
-         <%=link_to "Stores" ,users_path 
+         <%=link_to "Stores" , stores_path 
          
           %>
         </div> 
@@ -41,8 +41,14 @@
          
           %>
         </div> 
-           <div  class="list-group-item list-group-item-action py-2 ripple">
+          <div  class="list-group-item list-group-item-action py-2 ripple">
          <i  class="fas fa-tachometer-alt fa-fw me-3"></i>
+         <%=link_to "Sub products" , product_categories_path 
+         
+          %>
+        </div> 
+           <div  class="list-group-item list-group-item-action py-2 ripple">
+         <i  class="fa fa-sign-out me-3"></i>
          <%=link_to "Log out" ,sign_out_path 
          
           %>
